--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pre-commit = "^4.0.1"
+ruff = "^0.8.2"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff.lint]
+select = ["E", "F"]
+ignore = ["F401"]
