--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ readme = "README.md"
 python = "^3.12"
 pre-commit = "^4.0.1"
 ruff = "^0.8.2"
+black = "^24.10.0"
+flake8 = "^7.1.1"
+isort = "^5.13.2"
+mypy = "^1.13.0"
 
 
 [build-system]
