--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ mypy = "^1.13.0"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.ruff]
+line-length = 120
+
 [tool.ruff.lint]
 select = ["E", "F"]
-ignore = ["F401"]
+ignore = ["E501", "F401"]
