--- a/.github/workflows/analyser-ci.yml
+++ b/.github/workflows/analyser-ci.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Lint with Ruff
         run: |
+          poetry install
           ruff check
 
       - name: Format with Black
