--- a/.github/workflows/analyser-ci.yml
+++ b/.github/workflows/analyser-ci.yml
@@ -22,6 +22,7 @@ jobs:
           python -m pip install --quiet --upgrade pip
           pip install poetry
           poetry install
+          poetry update
 
       - name: Lint with Ruff
         run: |
