--- a/.github/workflows/analyser-ci.yml
+++ b/.github/workflows/analyser-ci.yml
@@ -21,8 +21,8 @@ jobs:
         run: |
           python -m pip install --quiet --upgrade pip
           pip install poetry
+          poetry config virtualenvs.create false
           poetry install
-          poetry update
 
       - name: Lint with Ruff
         run: |
