--- a/.github/workflows/analyser-ci.yml
+++ b/.github/workflows/analyser-ci.yml
@@ -42,6 +42,7 @@ jobs:
 
   Run-tests:
     runs-on: ubuntu-latest
+    needs: [Code-checks]
     steps:
       - uses: actions/checkout@v3
 
@@ -64,6 +65,7 @@ jobs:
 
   Analysing-log:
     runs-on: ubuntu-latest
+    needs: [Code-checks, Run-tests]
     steps:
       - uses: actions/checkout@v3
 
