--- a/.github/workflows/analyser-ci.yml
+++ b/.github/workflows/analyser-ci.yml
@@ -62,7 +62,7 @@ jobs:
         run: |
           tree
           pwd
-          cd /tests
+          cd tests
           cat ../config/log_analyser.json
           python -m unittest discover tests/
     
