--- a/.github/workflows/analyser-ci.yml
+++ b/.github/workflows/analyser-ci.yml
@@ -63,7 +63,7 @@ jobs:
           pwd
           cd tests
           cat ../config/log_analyser.json
-          python -m unittest discover -s tests/
+          python -m unittest tests/test_log_analyser.py
     
 
   Analysing-log:
