--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ black = "^24.10.0"
 flake8 = "^7.1.1"
 isort = "^5.13.2"
 mypy = "^1.13.0"
+flakehell = "^0.9.0"
 
 
 [build-system]
@@ -27,3 +28,6 @@ line-length = 120
 [tool.ruff.lint]
 select = ["E", "F"]
 ignore = ["E501", "F401"]
+
+[tool.flakehell]
+max_line_length = 120
